Fix: correct the style of the buttons because bugged on firefox

--- a/client/src/components/main/home/BottomPanel.scss
+++ b/client/src/components/main/home/BottomPanel.scss
@@ -12,7 +12,6 @@
   &__input-group {
     display: flex;
     width: 100%;
-    height: 100%;
   }
 
   &__barcode-input {
@@ -38,7 +37,8 @@
   }
 
   &__add-button {
-    min-width: 35px;
+    max-width: 35px;
+    width: 100%;
     padding: 5px;
     border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
